--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Document</title>
     <style>
         #para {
-            width: 10%;
+            width: 3rem;
+            background-color: blue;
+            color: white;
+            text-align: center;
         }
 
     </style>
